--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Hello Jose Contreras with Vanilla.js</title>
 
     <!-- Fontawesome is our recomended library for icons -->
     <link
@@ -13,23 +13,28 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
-
+  
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
+
+
+      <script src="index.js"></script>
+
+<h1>Generador de Excusas</h1>
+        <div class="aei">
+
+            <img src="https://play-lh.googleusercontent.com/ul1jYGvxeFehujSY89fO8g0yJfbLNBpNofhr0UHvwe0_-elanqN6e63x_w_0x8YIpAM=w240-h480-rw" alt="">
+          
+        </div>
+
+    <div class="gene">
+    
+        <p id="excuse">My dog ate my homework</p>
+    </div>
+
+
   </body>
 </html>
